- bugfix in IOS Memory for ASR 9000 image and reserved pool
- bugfix in cisco wlc status
- add hardware-health for cisco pix
- add mode supportedmibs
- last fallback alarm-mib for ios without envmon-mib
- bugfix in timeticks for hp
- bugfix in Nexus sensor thresholds (Thanks Marcel Fischer)
- bugfix in snmp-bulk-gets, more secure fallbacks to get-next
- bugfix in 64bit-interfaces

2014-02-07 2.6.5.2
- add another cisco unified communication model

2014-01-31 2.6.5.1
- handle a missing brocade fabric watch license in cpu-load & memory-usage
- add CISCO-ENHANCED-MEMPOOL-MIB

2014-01-24 2.6.5
- add mode --check-config, which finds unsaved (cisco only) configs (Thanks Simon Meggle)

2014-01-18 2.6.4.3
- bugfix in uptime (Thanks Finn Christiansen)

2014-01-15 2.6.4.2
- add http connection checks for bluecoat sg

2014-01-14 2.6.4
- add cisco ccm

2014-01-11 2.6.3.1
- support more SecureOS devices (i bought Juniper SSG5)
- bugfix in upnp-detection 

2013-12-21 2.6.3
- output number of sessions for f5 bigip load balancer pools
- deal with obviously wrong values from devices (20000% cpu usage)
- foundry server load balancing
- bugfix in interface-* for Juniper IVE
- filter hsrp groups by name

2013-11-08
- added support for role based login for Fritz Boxes (available since 
  FRITZ!OS 5.50). Use --community for password, --username for username if
  role based security is switched on.

2013-11-09
- bugfix for fritzbox

2013-11-08 2.6.1
- hardware-health for Checkpoint Firewall-1

2013-11-07 2.6
- finished bgp-peer-status (focus on as numbers with --name2)
- admin down with --interface-status can have any level with --mitigation

2013-10-31 2.5.4.1
- add Fujitsu Intelligent Blade Panel 30/12

2013-10-30 2.5.4
- add bgp

2013-10-01 2.5.3
- detect more brocade devices 

2013-09-26 2.5.2.1
- supress double output for html f5 pool members

2013-09-25 2.5.2
- add html output for f5 pool members

2013-09-18 2.5.1.2
- removed a leftover Data::Dumper (Thanks Frank Belau)
